# fs-auth-example

./: .gitignore  BUILD.bazel  LICENSE  README.md  WORKSPACE  buf.gen.yaml  repositories.bzl
backend/: Makefile  README.md  go.mod  go.sum
backend/cmd/client/: main.go  prerun.go
backend/cmd/service/: BUILD.bazel  http.go  main.go  tcp.go
backend/internal/auth/: authorizer.go  claims.go  identity.go  password.go  requests.go  token.go  token_test.go  verify.go
backend/internal/connection/: connection.go  http.go  tcp.go
backend/internal/counter/v1/: BUILD.bazel  counter.pb.go  counter_grpc.pb.go
backend/internal/environment/: BUILD.bazel  __debug_bin  address.go  auth.go  constants.go  environment.go  fs.go  local.go  variable.go
backend/internal/fs/: client.go  collection.go  counts.go
backend/internal/gcloud/: auth.go  config.go  exec.go
backend/internal/service/: BUILD.bazel  counter.go  grpc.go  http.go  service.go  tcp.go
backend/testdata/: .env  embeds.go  env.go  token.go
counter/v1/: BUILD.bazel  counter.proto
frontend/: .gitignore  Makefile  README.md  pubspec.yaml
frontend/android/app/: build.gradle
frontend/android/app/src/debug/: AndroidManifest.xml
frontend/android/app/src/main/: AndroidManifest.xml
frontend/android/app/src/main/kotlin/com/example/fs_auth_example/: MainActivity.kt
frontend/assets/: README.md
frontend/ios/Runner/: Info.plist
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: api.dart  app.dart  auth.dart  config.dart  constants.dart  counts.dart  home.dart  main.dart
frontend/web/: index.html  manifest.json
frontend/web/config/: README.md
