load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "v1_proto",
    srcs = ["counter.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "v1_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "fs_auth_example/internal/counter/v1",
    proto = ":v1_proto",
    visibility = ["//:__subpackages__"],
)

go_library(
    name = "counter",
    embed = [":v1_go_proto"],
    importpath = "fs_auth_example/internal/counter/v1",
    visibility = ["//:__subpackages__"],
)
