load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "service_lib",
    srcs = ["main.go"],
    importpath = "fs-auth-example/backend/cmd/service",
    visibility = ["//visibility:private"],
    deps = ["//backend/internal/environment"],
)

go_binary(
    name = "service",
    embed = [":service_lib"],
    visibility = ["//visibility:public"],
)
