load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "environment",
    srcs = [
        "constants.go",
        "environment.go",
        "variable.go",
    ],
    importpath = "fs-auth-example/backend/internal/environment",
    visibility = ["//backend:__subpackages__"],
)
