load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "service",
    srcs = ["service.go"],
    importpath = "fs-auth-example/backend/internal/service",
    visibility = ["//backend:__subpackages__"],
    deps = [
        "//backend/internal/counter/v1:counter_v1",
        "//backend/internal/environment",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
