load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "counter_v1",
    srcs = ["counter.pb.go"],
    importpath = "fs-auth-example/backend/internal/counter/v1",
    visibility = ["//backend:__subpackages__"],
    deps = [
        "@com_github_golang_protobuf//proto:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
    ],
)
